# ProMoAI

./: .gitignore  .gitmodules  .pre-commit-config.yaml  MANIFEST.in  README.md  app.py  environment.yml  environment_backup.yml  packages.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
example_online_shop/: prompt_1.txt  prompt_2_error_handling.txt
promoai/: __init__.py  constants.py  llm_model_generator.py  main.py
promoai/aipa/: abstraction.py  bpmn_analyzer.py  chat.py  common.py  constants.py  conversation.py  llm_connection.py  prompting.py
promoai/general_utils/: ai_providers.py  app_utils.py  constants.py  llm_connection.py
promoai/model_generation/: __init__.py  code_extraction.py  generator.py  llm_model_generator.py  model_generation.py  validation.py
promoai/pn_to_powl/: converter.py
promoai/pn_to_powl/converter_utils/: cut_detection.py  powl_to_code.py  preprocessing.py  subnet_creation.py  weak_reachability.py
promoai/prompting/: __init__.py  prompt_engineering.py  self_evaluation.py  shots.py  shots_top_down.py
tests/: test_cut_history.py
utils/: __init__.py  app_utils.py  constants.py  llm_model_generator.py
utils/bpmn/: graphviz.py
utils/general_utils/: ai_providers.py  llm_connection.py  openai_connection.py
utils/model_generation/: __init__.py  code_extraction.py  generator.py  model_generation.py  validation.py
utils/petrinet/: to_petri_net.py
utils/pn_to_powl/: converter.py
utils/pn_to_powl/converter_utils/: cut_detection.py  powl_to_code.py  preprocessing.py  weak_reachability.py
utils/powl/: __init__.py  obj.py  parser.py
utils/prompting/: __init__.py  prompt_engineering.py  self_evaluation.py  shots.py  shots_top_down.py
